--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "Materialize": "materialize#0.97.6",
     "material-preloader": "artur99/material-preloader",
-    "underscore": "^1.8.3",
-    "baguettebox.js": "^1.7.0"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {},
   "appPath": "app",
