Update-uri majore la structură

--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,12 @@
     },
     "config": {
         "vendor-dir": "_phpvendor"
+    },
+    "autoload": {
+        "psr-0": {
+            "Controllers": "app/",
+            "Models": "app/",
+            "Misc": "app/"
+        }
     }
 }
